Calculate the grid widths in percentages

--- a/Ressources/Private/Sass/_settings/_functions.scss
+++ b/Ressources/Private/Sass/_settings/_functions.scss
@@ -24,9 +24,9 @@
 
 
 // =============================================================================
-// Grid Calc
+// Offset Grid Calc
 // =============================================================================
-@function gridCalc($colNumber, $totalColumns) {
+@function offsetCalc($colNumber, $totalColumns) {
   @return ($columWidth * $colNumber) + ($columnGutter * ($colNumber - 1));
 }
 
