--- a/Ressources/Private/Sass/_settings/_mixins.scss
+++ b/Ressources/Private/Sass/_settings/_mixins.scss
@@ -45,10 +45,10 @@
       // Depending on the $type it will adjust the calculation
       @if $type == 'offset' {
         // Calculation fix for all offset-by classes
-        #{$property}: gridCalc($i, $totalColumns) + ($columnGutter);
+        #{$property}: offsetCalc($i, $totalColumns) + ($columnGutter);
       } @else { // Standard case
         // Sets the property and passes the calculation via the gridCalc function in _functions.scss
-        #{$property}: gridCalc($i, $totalColumns);
+        #{$property}: percentage($i / $totalColumns);
       }
     }
   }
