Add a _head.scss
Move any declarations wich should be put at the top in this document
e.g.
* @font-face rules
* @viewport rules
* Declarations wich affects all elements

--- a/Ressources/Private/Sass/main.scss
+++ b/Ressources/Private/Sass/main.scss
@@ -23,6 +23,7 @@ $package_name: t3b_frontend;
 // =============================================================================
 // Generic
 // =============================================================================
+@import "generic/_head";              // Declarations wich should be put at the top
 @import "generic/_normalize";         // Normalize elements accross all browsers
 @import "generic/_shared";            // SASS Placeholders
 @import "generic/_grid";              // Grid
