Fix a inconsistency for a font-size on figcaption

--- a/Ressources/Private/Sass/base/_media.scss
+++ b/Ressources/Private/Sass/base/_media.scss
@@ -42,8 +42,7 @@ figure {
   margin: 0;
 }
 figcaption { /* 6 */
-  font-size: ($baseFontSize - 2) +px;
-  font-size: rs(($baseFontSize - 2), $unit: rem);
+  @include font-size(($baseFontSize - 2));
 }
 iframe {
   @extend %sass-margin-bottom;
