--- a/Ressources/Private/Sass/generic/_shared.scss
+++ b/Ressources/Private/Sass/generic/_shared.scss
@@ -9,7 +9,9 @@
 
 
 %reset-list {
-/* ========================== Reset list ========================= */
+/* ========================== Reset list =========================
+ * Resets the standard list styles of a <ul> or <ol>
+ */
   list-style: none;
   margin-top: 0;
   margin-bottom: 0;
