Add a reset-list class to extend the placeholder

--- a/Ressources/Private/Sass/generic/_shared.scss
+++ b/Ressources/Private/Sass/generic/_shared.scss
@@ -8,6 +8,7 @@
  */
 
 
+.reset-list,
 %reset-list {
 /* ========================== Reset list =========================
  * Resets the standard list styles of a <ul> or <ol>
