Rename .siteLogo to .site-logo to have a consistent class name scheme

--- a/Ressources/Private/Layouts/index.html
+++ b/Ressources/Private/Layouts/index.html
@@ -16,7 +16,7 @@
 
 <header class="site-header" role="banner">
 	<div class="wrapper">
-		<a class="siteLogo ir" href="">Logoname</a>
+		<a class="site-logo ir" href="">Logoname</a>
 		<nav role="navigation">
 			<ul class="nav site-nav">
 				<li class="active"><a href="">Lorem</a></li>
