--- a/Ressources/Private/Sass/base/_base.scss
+++ b/Ressources/Private/Sass/base/_base.scss
@@ -43,7 +43,7 @@ body {
 /* =============================================================================
 $ Logos
 ================================================================================ */
-.siteLogo {
+.site-logo {
   display: block;
   @include image-replacement('logo.png');
 
