Extend the .ir shortcut with an explanational(full-name) class

--- a/Ressources/Private/Sass/generic/_helper.scss
+++ b/Ressources/Private/Sass/generic/_helper.scss
@@ -13,7 +13,8 @@
 .fl-l { float: left; }
 
 /* For image replacement */
-.ir {
+.ir,
+.image-replacement {
   background-color: transparent;
   border: 0;
   overflow: hidden;
