Replace first and last grid classes with a negative margin on the .row class

--- a/Ressources/Private/Layouts/index.html
+++ b/Ressources/Private/Layouts/index.html
@@ -32,12 +32,12 @@
 <div class="site-content" role="main">
 	<div class="wrapper">
 
-		<div class="row clearfix">
-			<div class="columns--first columns--three"> </div>
+		<div class="gw clearfix">
+			<div class="columns--three"> </div>
 
 			<div class="columns--six"> </div>
 
-			<div class="columns--last columns--three"> </div>
+			<div class="columns--three"> </div>
 		</div>
 
 	</div>
