Remove the .grid-wrapper dependency on the .clearfix class
Instead, the .gw will extend the clearfix to have a strict modularity
without any dependencys.

--- a/Ressources/Private/Layouts/index.html
+++ b/Ressources/Private/Layouts/index.html
@@ -32,7 +32,7 @@
 <div class="site-content" role="main">
 	<div class="wrapper">
 
-		<div class="gw clearfix">
+		<div class="gw">
 			<div class="columns--three"> </div>
 
 			<div class="columns--six"> </div>
