Remove the grid-main selector and replace it with an css class

--- a/Ressources/Private/Layouts/index.html
+++ b/Ressources/Private/Layouts/index.html
@@ -33,11 +33,11 @@
 	<div class="wrapper">
 
 		<div class="gw">
-			<div class="columns--three"> </div>
+			<div class="gi columns--three"> </div>
 
-			<div class="columns--six"> </div>
+			<div class="gi columns--six"> </div>
 
-			<div class="columns--three"> </div>
+			<div class="gi columns--three"> </div>
 		</div>
 
 	</div>
