--- a/Ressources/Private/Sass/generic/_grid.scss
+++ b/Ressources/Private/Sass/generic/_grid.scss
@@ -23,9 +23,9 @@ $ Grid Classes
  * grid column styling, below is an example & recommended markup grid
  *
   <div class="gw">
-    <div class="columns--three"> </div>
-    <div class="columns--six"> </div>
-    <div class="columns--three"> </div>
+    <div class="gi columns--three"> </div>
+    <div class="gi columns--six"> </div>
+    <div class="gi columns--three"> </div>
   </div>
  *
  */
@@ -35,14 +35,15 @@ $ Grid Classes
   margin-left: -($columnGutter / 2) +px;
   margin-right: -($columnGutter / 2) +px;
 }
-[class^="columns--"] {
+.gi,
+.grid-item {
   // Base styles for .columns--# classes
   float: $grid-direction;
   padding-left: ($columnGutter / 2) +px;
   padding-right: ($columnGutter / 2) +px;
 }
 // Layout modes and helper classes
-.columns--centered {
+.grid-item--centered {
   margin-left: auto;
   margin-right: auto;
   float: none;
