--- a/Ressources/Private/Sass/base/_forms.scss
+++ b/Ressources/Private/Sass/base/_forms.scss
@@ -13,7 +13,7 @@ $ General styling of Input Fields
 label {
   display: block;
   font-weight: $bold;
-  @include font-size(14);
+  @include font-size(14, $append-vrythm: true);
   &[for] {
     cursor: pointer;
   }
