--- a/Ressources/Private/Sass/base/_forms.scss
+++ b/Ressources/Private/Sass/base/_forms.scss
@@ -125,9 +125,9 @@ $ General styling of Form Fields
 ================================================================================ */
 fieldset {
   /* Define consistent border, margin, and padding. */
-  border: 1px $basicBorderStyle $basicBorderColor;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
+  border: 0;
+  margin: 0;
+  padding: 0;
 }
 form {
   @if $oldIE == true {
