Set all text-inputs to inline-block by default

--- a/Ressources/Private/Sass/base/_forms.scss
+++ b/Ressources/Private/Sass/base/_forms.scss
@@ -34,6 +34,7 @@ input[type="datetime-local"],
 input[type="month"],
 input[type="time"],
 input[type="week"] {
+  display: inline-block;
   margin-bottom: $baseLineHeight / 2 +px;
   padding: 0.35em 0.4em;
 
