Change the intend unit to 'em'

--- a/Ressources/Private/Sass/base/_typography.scss
+++ b/Ressources/Private/Sass/base/_typography.scss
@@ -135,7 +135,7 @@ $ Typographic Helper Classes
 .align-center { text-align: center; }
 .align-right  { text-align: right; }
 .align-left   { text-align: left; }
-.intend { padding: 0 20px; }
+.intend { padding: 0 1.5em; }
 
 
 /* =============================================================================
