Remove an unnecessary comment

--- a/Ressources/Private/Sass/base/_typography.scss
+++ b/Ressources/Private/Sass/base/_typography.scss
@@ -1,6 +1,6 @@
 /*!
  * Basic styling for all typographic related elements e.g.
- * <b>, <sup>, <i> and so on
+ * <b>, <sup>, <i>
  *
  * @package #{$package_name()}
  * @path base/_typography.scss
