--- a/Ressources/Private/Sass/base/_media.scss
+++ b/Ressources/Private/Sass/base/_media.scss
@@ -45,7 +45,7 @@ figcaption { /* 6 */
   @include font-size(($baseFontSize - 2));
 }
 iframe {
-  @extend %sass-margin-bottom;
+  @extend %margin-bottom;
 }
 
 
@@ -53,7 +53,7 @@ iframe {
 $ Video
 ================================================================================ */
 video {
-  @extend %sass-margin-bottom;
+  @extend %margin-bottom;
 }
 
 
@@ -61,7 +61,7 @@ video {
 $ Audio
 ================================================================================ */
 audio {
-  @extend %sass-margin-bottom;
+  @extend %margin-bottom;
   min-width: 65%;
 
   &:not([controls]) {
