--- a/Ressources/Private/Sass/base/_tables.scss
+++ b/Ressources/Private/Sass/base/_tables.scss
@@ -13,7 +13,7 @@ $ Tables
 table {
   width: 100%;
   margin-top: 0;
-  @extend %sass-margin-bottom;
+  @extend %margin-bottom;
   border-collapse: collapse;
   border-spacing: 0;
 
