--- a/Ressources/Private/Sass/generic/_grid.scss
+++ b/Ressources/Private/Sass/generic/_grid.scss
@@ -16,9 +16,8 @@ $grid-direction:  $start;
 
 /* =============================================================================
 $ Grid Classes
-================================================================================ */
-/* ========================= Grid helper ========================= */
-/**
+================================================================================
+ *
  * A basic grid system wich is dependent on the border-box layout mode
  * e.g.
  *
@@ -27,8 +26,8 @@ $ Grid Classes
     <div class="gi columns--six"> </div>
     <div class="gi columns--three"> </div>
   </div>
- *
- */
+================================================================================ */
+/* ========================= Grid helper ========================= */
 .gw,
 .grid-wrapper {
   @extend .cf;
