--- a/Ressources/Private/Sass/base/_tables.scss
+++ b/Ressources/Private/Sass/base/_tables.scss
@@ -26,34 +26,35 @@ th, td { vertical-align: top; }
 /* =============================================================================
 $ Contenttable-1
 ================================================================================
-* Extends the basic border styles
-* Bordered table with an odd & even changing background-color e.g.
-<table class="contenttable-1">
-  <thead>
-    <tr>
-      <th class="td-0">Name</th>
-      <th>Age</th>
-      <th>Residence</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr class="tr-odd">
-      <td class="td-0">Max Mustermann</td>
-      <td>20</td>
-      <td>Berlin</td>
-    </tr>
-    <tr class="tr-even">
-      <td class="td-0">Max Mustermann</td>
-      <td>20</td>
-      <td>Berlin</td>
-    </tr>
-    <tr class="tr-odd tr-last">
-      <td class="td-0">Max Mustermann</td>
-      <td>20</td>
-      <td>Berlin</td>
-    </tr>
-  </tbody>
-</table>
+ * Extends the basic border styles
+ * Bordered table with an odd & even changing background-color e.g.
+ *
+  <table class="contenttable-1">
+    <thead>
+      <tr>
+        <th class="td-0">Name</th>
+        <th>Age</th>
+        <th>Residence</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="tr-odd">
+        <td class="td-0">Max Mustermann</td>
+        <td>20</td>
+        <td>Berlin</td>
+      </tr>
+      <tr class="tr-even">
+        <td class="td-0">Max Mustermann</td>
+        <td>20</td>
+        <td>Berlin</td>
+      </tr>
+      <tr class="tr-odd tr-last">
+        <td class="td-0">Max Mustermann</td>
+        <td>20</td>
+        <td>Berlin</td>
+      </tr>
+    </tbody>
+  </table>
 ================================================================================ */
 /*table*/.contenttable-1 {
   border: 1px solid $basicBorderColor;
@@ -74,34 +75,35 @@ $ Contenttable-1
 /* =============================================================================
 $ Contenttable-2
 ================================================================================
-* Extends the basic border styles
-* Clean table with borders below each row e.g.
-<table class="contenttable-2">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Age</th>
-      <th>Residence</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Max Mustermann</td>
-      <td>20</td>
-      <td>Berlin</td>
-    </tr>
-    <tr>
-      <td>Max Mustermann</td>
-      <td>20</td>
-      <td>Berlin</td>
-    </tr>
-    <tr>
-      <td>Max Mustermann</td>
-      <td>20</td>
-      <td>Berlin</td>
-    </tr>
-  </tbody>
-</table>
+ * Extends the basic border styles
+ * Clean table with borders below each row e.g.
+ *
+  <table class="contenttable-2">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Age</th>
+        <th>Residence</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Max Mustermann</td>
+        <td>20</td>
+        <td>Berlin</td>
+      </tr>
+      <tr>
+        <td>Max Mustermann</td>
+        <td>20</td>
+        <td>Berlin</td>
+      </tr>
+      <tr>
+        <td>Max Mustermann</td>
+        <td>20</td>
+        <td>Berlin</td>
+      </tr>
+    </tbody>
+  </table>
 ================================================================================ */
 /*table*/.contenttable-2 {
   td, th {
@@ -115,34 +117,35 @@ $ Contenttable-2
 /* =============================================================================
 $ Contenttable-3
 ================================================================================
-* Extends the basic border styles
-* Clean condensed table with borders below each row e.g.
-<table class="contenttable-3">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Age</th>
-      <th>Residence</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>Max Mustermann</td>
-      <td>20</td>
-      <td>Berlin</td>
-    </tr>
-    <tr>
-      <td>Max Mustermann</td>
-      <td>20</td>
-      <td>Berlin</td>
-    </tr>
-    <tr>
-      <td>Max Mustermann</td>
-      <td>20</td>
-      <td>Berlin</td>
-    </tr>
-  </tbody>
-</table>
+ * Extends the basic border styles
+ * Clean condensed table with borders below each row e.g.
+ *
+  <table class="contenttable-3">
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Age</th>
+        <th>Residence</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Max Mustermann</td>
+        <td>20</td>
+        <td>Berlin</td>
+      </tr>
+      <tr>
+        <td>Max Mustermann</td>
+        <td>20</td>
+        <td>Berlin</td>
+      </tr>
+      <tr>
+        <td>Max Mustermann</td>
+        <td>20</td>
+        <td>Berlin</td>
+      </tr>
+    </tbody>
+  </table>
 ================================================================================ */
 /*table*/.contenttable-3 {
   td, th {
