--- a/Ressources/Private/Sass/objects/_navigations.scss
+++ b/Ressources/Private/Sass/objects/_navigations.scss
@@ -10,19 +10,17 @@
 
 /* =============================================================================
 $ Navigations
-================================================================================ */
-/**
+================================================================================
  * When used on an `ol` or `ul` wrapper, this class throws the list into horizontal mode
  * e.g.:
  *
-   <ul class="nav">
-       <li><a href=#>Home</a></li>
-       <li><a href=#>About</a></li>
-       <li><a href=#>Portfolio</a></li>
-       <li><a href=#>Contact</a></li>
-   </ul>
- *
- */
+  <ul class="nav">
+      <li><a href=#>Home</a></li>
+      <li><a href=#>About</a></li>
+      <li><a href=#>Portfolio</a></li>
+      <li><a href=#>Contact</a></li>
+  </ul>
+================================================================================ */
 .nav {
   @extend %reset-list;
   li { display: inline-block; }
