--- a/Ressources/Private/Sass/base/_lists.scss
+++ b/Ressources/Private/Sass/base/_lists.scss
@@ -30,3 +30,15 @@ dl {
     margin: 0 0 0 40px;
   }
 }
+
+/* ======================== Reset list ========================= */
+%reset-list,
+.reset-list {
+/*
+ * Resets the standard list styles of a <ul> or <ol>
+ */
+  list-style: none;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
