--- a/Ressources/Private/Sass/base/_lists.scss
+++ b/Ressources/Private/Sass/base/_lists.scss
@@ -48,3 +48,37 @@ dl {
     margin: 0 0 0 40px;
   }
 }
+
+
+/* =============================================================================
+$ Horizontal definition abstraction
+================================================================================
+ * Display a definition list in a horizontal order
+ * e.g.
+ *
+<dl class="dl--horizontal">
+  <dt>Description lists</dt>
+  <dd>A description list is perfect for defining terms.</dd>
+  <dt>Euismod</dt>
+  <dd>Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.</dd>
+  <dd>Donec id elit non mi porta gravida at eget metus.</dd>
+  <dt>Malesuada porta</dt>
+  <dd>Etiam porta sem malesuada magna mollis euismod.</dd>
+  <dt>Felis euismod semper eget lacinia</dt>
+  <dd>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</dd>
+</dl>
+================================================================================ */
+.dl--horizontal {
+  @extend .cf;
+  dt {
+    float: left;
+    width: 19%;
+    overflow: hidden;
+    clear: left;
+    text-align: right;
+    @extend .text-break;
+  }
+  dd {
+    margin-left: 21%;
+  }
+}
