--- a/Ressources/Private/Sass/_settings/_mixins.scss
+++ b/Ressources/Private/Sass/_settings/_mixins.scss
@@ -35,21 +35,15 @@
 // =============================================================================
 // Generates gird classes, with a bunch of options like setting a prefix or the property
 // e.g.:
-// @include grid(1 2 3 4 5 6 8 10 12, $prefix: 'm--', $property: 'height');
+// @include grid(1 2 3 4 5 6 8 10 12, $prefix: 'm--');
 // =============================================================================
-@mixin grid($stack: $gridStack, $prefix: '', $property: 'width', $type: '') {
+@mixin grid($stack: $gridStack, $prefix: '', $property: 'width') {
   // Starts the loop
   @each $i in $stack {
     // Set the class-prefix and convert the passed number to their word equivalents
     .#{$prefix}#{convert-number-to-word($i)} {
-      // Depending on the $type it will adjust the calculation
-      @if $type == 'offset' {
-        // Calculation fix for all offset-by classes
-        #{$property}: offsetCalc($i, $totalColumns) + ($columnGutter);
-      } @else { // Standard case
-        // Sets the property and passes the calculation via the gridCalc function in _functions.scss
-        #{$property}: percentage($i / $totalColumns);
-      }
+      // Sets the property and passes the calculation via the gridCalc function in _functions.scss
+      #{$property}: percentage($i / $totalColumns);
     }
   }
 }
