Add a comment to explain the current status of CSS Viewports
And why they are currently disabled inside the _head.scss file

--- a/Ressources/Private/Sass/generic/_head.scss
+++ b/Ressources/Private/Sass/generic/_head.scss
@@ -7,6 +7,8 @@
  */
 
 
+// Disabled until the WP8 CSS Viewport bug is fixed.
+// http://mattstow.com/responsive-design-in-ie10-on-windows-phone-8.html
 // @if $responsive == true {
 //   /* =============================================================================
 //   $ CSS Viewport
