--- a/Ressources/Private/Sass/_settings/_variables.scss
+++ b/Ressources/Private/Sass/_settings/_variables.scss
@@ -74,14 +74,26 @@ $baseFontFamily:        $sansFontFamily !default;
 $baseFontWeight:        $regular !default;
 $baseTextColor:         #3C474B !default;
 
+// =============================== Spacings ===============================
+$basicSpacing:          $baseLineHeight / $baseFontSize !default;
+$halfSpacing:           $basicSpacing / 2 !default;
+
+
+// =============================================================================
+// Headings
+// =============================================================================
 // =============================== Headings ===============================
 $headingsFontFamily:    inherit !default; // empty to use $baseFontFamily
 $headingsFontWeight:    $bold !default;
 $headingsColor:         #000 !default;
 
-// =============================== Spacings ===============================
-$basicSpacing:          $baseLineHeight / $baseFontSize !default;
-$halfSpacing:           $basicSpacing / 2 !default;
+// ============================== Font-Sizes ==============================
+$h1-size:               36 !default;
+$h2-size:               30 !default;
+$h3-size:               24 !default;
+$h4-size:               20 !default;
+$h5-size:               16 !default;
+$h6-size:               14 !default;
 
 
 // =============================================================================
