--- a/Ressources/Private/Sass/generic/_head.scss
+++ b/Ressources/Private/Sass/generic/_head.scss
@@ -1,5 +1,6 @@
 /*!
- * Declarations wich should be put at the top of the document
+ * Declarations wich should be put at the top of the document e.g.
+ * @font-face declarations and CSS viewports
  *
  * @package #{$package_name()}
  * @path generic/_head.scss
