--- a/Ressources/Private/Sass/generic/_grid.scss
+++ b/Ressources/Private/Sass/generic/_grid.scss
@@ -22,9 +22,9 @@ $ Grid Classes
  * e.g.
  *
   <div class="gw">
-    <div class="gi columns--three"> </div>
-    <div class="gi columns--six"> </div>
-    <div class="gi columns--three"> </div>
+    <div class="gi gi--three"> </div>
+    <div class="gi gi--six"> </div>
+    <div class="gi gi--three"> </div>
   </div>
 ================================================================================ */
 /* ========================= Grid helper ========================= */
@@ -36,7 +36,7 @@ $ Grid Classes
 }
 .gi,
 .grid-item {
-  // Base styles for .columns--# classes
+  // Base styles for .gi--# classes
   float: $grid-direction;
   padding-left: ($columnGutter / 2) +px;
   padding-right: ($columnGutter / 2) +px;
@@ -49,7 +49,7 @@ $ Grid Classes
 }
 
 /* ========================== Grid widths ======================== */
-@include grid($prefix: 'columns--');
+@include grid($prefix: 'gi--');
 
 @if ($includeOffsetClasses == true) {
   /* ====================== Grid offset helpers ==================== */
