--- a/Ressources/Private/Sass/base/_forms.scss
+++ b/Ressources/Private/Sass/base/_forms.scss
@@ -41,7 +41,7 @@ input[type="week"] {
 textarea {
   display: block;
   height: auto; /* Reset height since textareas have the attribute rows="" */
-  min-height: 70px;
+  min-height: ($baseLineHeight *3) +px; /* Set a min-height for textareas of 3 rows */
 
   resize: vertical; /* So users cannot expand the textarea over its boundaries */
   overflow: auto; /* Removes default vertical scrollbar in IE6/7/8/9. */
